# study_gazebo_and_urdf

./: README.md
robot_description/launch/: robot_control.launch  rviz.launch  spawn.launch  spawn_multi.launch
robot_description/urdf/: robot.gazebo  robot.xacro  robot_urdf.org_urdf
studying_gazebo/launch/: empty_world.launch
studying_gazebo/worlds/: world_gui.world
writing_plugins/: CMakeLists.txt
writing_plugins/launch/: amodel.launch  gazebo.launch
writing_plugins/src/: a_model_plugin.cc  my_gazebo_plugin.cc  world_gazebo_plugin.cc
writing_plugins/worlds/: amodel.world  gazebo.world  model.world
